# Agent_Team_Builder_V1

./: .env.example  .env.template  .gitignore  README.md  README.md.new  REFACTOR_SUMMARY.md  Team_Builder_Agent_Service_V2.md  code-refactor prompt_to_add_langgraph_and_autgen.md  code-refactor_prompt_to_add_postgres_no4j_Airbyte.md  code-refactor_prompt_to_add_postgres_update_delete_agent_team.md  pyproject.toml  v1.py  v2.py
alembic/: env.py
alembic/versions/: 7a5c1e9f32d8_add_soft_delete_and_versioning.py  auto_refresh_agent_team_config.sql  d64bdbad1e35_init_agent_teams.py
configs/: agent_team_config_file_example.json  agent_team_config_file_example_V2.json  app_config_file_example.json  app_config_file_example_V2.json  base_nodes_properties.json  base_nodes_properties_V2.json  tenant_config_file_example_V2.json
logs/: .gitkeep
scripts/: init_data.sh  install_deps.sh  install_dev_deps.sh  run_app.sh  run_migrations.sh  run_tests.sh  setup_airbyte_sync.sh  setup_env.sh  setup_postgres.sh  sync_langgraph_autogen.sh  upgrade_pytorch.sh
src/: __init__.py  database.py  main.py
src/config/: __init__.py  database.py  db_models.py  schema.py
src/config/models/: __init__.py  base.py  (+5 more)
src/graphs/: __init__.py  tenant_team_graph.py
src/services/: __init__.py  team_builder.py  team_deleter.py  team_executor.py  team_updater.py
src/tools/: __init__.py  chunking_tool.py  embed_tool.py  graph_tool.py  qdrant_tool.py  webapi_tool.py
tests/: test_api.py  test_api_http.py  test_db_api.py  test_graph_execution.py  test_team_builder.py  test_tool_calls.py
