[project]
name = "ai-team-builder-service"
version = "1.0.0"
description = "AI Team Builder Agent Service – FastAPI Implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "neo4j>=5.14.0",
    "sentence-transformers>=2.2.2",
    "python-multipart>=0.0.6",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.17",
    "pyautogen>=0.2.25",
    "numpy>=1.24.0",
    # Custom PyTorch build from source
    "torch @ file:///home/mentorius/AI_Services/PyTorch_From_Source/pytorch",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]
